k8s/ckan/overlays/dev/resources.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: odeckan
spec:
  template:
    spec:
      containers:
      - name: ode-ckan # (1)
        resources:
          requests:
            memory: 1Gi
            cpu: 500m
          limits:
            memory: 2Gi
            cpu: 1000m
