k8s/ckan/overlays/dev/volumeclaim.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: odlckan
spec:
  volumeClaimTemplates:
  - metadata:
      name: odlckan-data # (1)
    spec:
      accessModes: [ ReadWriteOnce ]
      storageClassName: odl-ckan-dev-hdd-sc
      resources:
        requests:
          storage: 512Gi
