k8s/ckan/overlays/dev/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    cert-manager.io/duration: 2160h0m0s
    cert-manager.io/issuer: adcs-issuer
    cert-manager.io/issuer-group: adcs.certmanager.csf.nokia.com
    cert-manager.io/issuer-kind: ClusterAdcsIssuer
    cert-manager.io/private-key-rotation-policy: Always
    cert-manager.io/private-key-size: '4096'
    cert-manager.io/renew-before: 360h0m0s
    cert-manager.io/usages: client auth, server auth
  name: ode-ckan-ingress-dev
spec:
  tls:
  - hosts:
    - ode-ckan-dev.de-prod.dk
    secretName: ode-ckan-dev-ingress-tls
  rules:
  - host: ode-ckan-dev.de-prod.dk
    http:
      paths:
      - backend:
          service:
            name: odeckan-service
            port:
              number: 5000
        path: /(.*)
        pathType: ImplementationSpecific
status: {}
